--- a/index.html
+++ b/index.html
@@ -349,17 +349,11 @@ canvas.molc{display:block;width:100%!important;height:100%!important}
 <nav class="nav">
   <div class="nav-brand">🧪 Noah's Chem Lab</div>
   <a class="tab active" href="#home-top">🏠 Home</a>
-  <a class="tab" href="#section-chart">📈 Chart</a>
+  <a class="tab" href="#section-chart">📈 Graph</a>
   <a class="tab" href="#section-molecules">🔬 Molecules</a>
-  <a class="tab" href="#section-chemistry">⚗️ Chemistry</a>
-  <a class="tab" href="#section-cer">📝 CER</a>
+  <a class="tab" href="#section-chemistry">⚗️ IDF's</a>
   <a class="tab" href="#section-quiz">🧠 Quiz</a>
-  <a class="tab" href="#section-polarity">🔀 Polarity</a>
   <a class="tab" href="#section-simulator">⚡ Simulator</a>
-  <a class="tab" href="#section-error">🧪 Errors</a>
-  <a class="tab" href="#section-realworld">🌍 Real World</a>
-  <a class="tab" href="#section-bigidea">🏆 Big Idea</a>
-  <a class="tab" href="#section-study">📖 Study Sheet</a>
 </nav>
 
 <div class="tt" id="tt"></div>
@@ -545,7 +539,7 @@ canvas.molc{display:block;width:100%!important;height:100%!important}
   <div class="cer-grid">
     <div class="cer-block">
       <div class="cer-lbl" style="color:var(--ldf)">Claim</div>
-      <div class="cer-body">The stronger the intermolecular forces between molecules, the higher the viscosity and the slower the bubble. H-bonding liquids are slowest, then dipole–dipole, then LDF-only fastest.</div>
+      <div class="cer-body">The stronger the intermolecular forces, the higher the viscosity of the substance</div>
     </div>
     <div class="cer-block">
       <div class="cer-lbl" style="color:var(--dp)">Evidence</div>
@@ -558,7 +552,7 @@ canvas.molc{display:block;width:100%!important;height:100%!important}
     </div>
     <div class="cer-block">
       <div class="cer-lbl" style="color:var(--hb)">Reasoning</div>
-      <div class="cer-body">Viscosity = resistance to flow. Stronger IMF = molecules harder to push apart = slower bubble. LDF (temp. dipoles) → easy to overcome → fast. Dipole (permanent) → moderate. H-bond (H on O) → dense network → very slow. Pentane vs Pentanol isolates IMF as the cause.</div>
+      <div class="cer-body"> This shows that pentanol has a higher viscosity making the substance move slower which is what we observed in the lab. Furthermore, vise versa for Pentane which had a lower viscosity because LDF’s are not as strong making the speed faster.</div>
     </div>
   </div>
 
